CHANGELOG for Close Combat Free.

Quite a lot of basic engine stuff was done before this changelog was created. Some more history can be devised from git sources (although even there, the thing is not complete).

=== === === ===
06.12.2011:
 - 

05.12.2011:
 - parametrized menus, they should look OK on different screen sizes (and densities). Still needs testing,
   but seems to work

03.12.2011:
 - organise files in PWD/gui into neat folders
 - made soldier menu and statu message menu disappear if they are empty
 - add basic terrain info communication
 - add terrainInfo reader to CcfConfig
 - add "cover" property to props
 - make BottomMenu adjust it's size and not obstruct the view. On mobile, the old behaviour is kept
 - add PropRectangle

02.12.2011:
 - rewrote SoldierMenu so that it is based on GridView
 - add Map_tst2, rebuild Map element, begin adding map props (obstacles). First one is HouseBasic_tst
 - add primitive collision detection. It results in the obstacle removing it's top (for example, a house
   roof becomes invisible)

01.12.2011:
 - add CcfConfigSaver
 - add CcfMain (just initial, copy implementation.
   This is likely to be reshaed later)
 - add status message handling
 - change RosterMenu to be GridView-based

30.11.2011:
 - add sliding BottomMenu (pretty crude implementation, but works)
 - add soldier menu
 - add single soldiers within a unit
 - unified infobox viewer
 - made menus automatically unroll on init, if in desktop mode
 - add OptionsMenu - a roll-down from Options in TopMenu,
   where user will be able to choose from: Preferences, Save game,
   Load game, Quit
 - add quit capability
 - changed QMap<QString, QString> into QMap<QString, QPair<QString, bool> >
   in Config classes - this will enable for the future ConfigSaver class
   to be optimised, as it will only update lines that have changed

29.11.2011:
 - add stop to context menu entry
 - make context menu grid based