@@ -3,9 +3,10 @@ import QtQuick 1.1
 Rectangle {
     property string buttonText: ""
     signal entryClicked(string entryName)
+    property color backgroundColor: "#5e2c24"
 
     id: entryButton
-    color: "#5e2c24"
+    color: backgroundColor
     border.color: "#c0baba"
     width: entryText.paintedWidth
     height: entryText.paintedHeight
@@ -30,8 +31,8 @@ Rectangle {
         acceptedButtons: Qt.LeftButton
         hoverEnabled: true
 
-        onEntered: parent.color = "#7e4c44";
-        onExited: parent.color = "#5e2c24";
+        onEntered: parent.color = Qt.tint(backgroundColor, "#80202020");
+        onExited: parent.color = backgroundColor;
         onClicked: entryClicked(buttonText);
     }
 }
